--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -27,7 +27,8 @@
 
   <ItemGroup>
     <PackageReference Include="EngineBay.Core" Version="0.3.0" />
-    <PackageReference Include="EngineBay.Persistence" Version="0.4.0" />
+    <PackageReference Include="EngineBay.Persistence" Version="0.5.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="PrivateSetterContractResolver" Version="2.1.0" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="7.1.3" />
     <PackageReference Include="FluentValidation" Version="11.5.1" />
@@ -38,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../README.md" Pack="true" PackagePath="\"/>
-    <None Include="../LICENSE.txt" Pack="true" PackagePath=""/>
+    <None Include="../README.md" Pack="true" PackagePath="\" />
+    <None Include="../LICENSE.txt" Pack="true" PackagePath="" />
 </ItemGroup>
 </Project>
