--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -26,7 +26,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EngineBay.Persistence" Version="2.5.2" />
+    <PackageReference Include="EngineBay.Persistence" Version="3.0.0" />
+    <PackageReference Include="EngineBay.Authentication" Version="0.1.0" />
     <PackageReference Include="PrivateSetterContractResolver" Version="2.1.0" />
     <PackageReference Include="FluentValidation" Version="11.5.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
