--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="EngineBay.Authentication" Version="0.11.11" />
     <PackageReference Include="EngineBay.Persistence" Version="3.4.8" />
+    <PackageReference Include="HtmlSanitizer" Version="8.0.692" />
     <PackageReference Include="PrivateSetterContractResolver" Version="2.1.0" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
