#patch. add conditional project references when building in debug

--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -27,9 +27,16 @@
     <IsTrimmable>false</IsTrimmable>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="$(Configuration)=='Debug'">
+    <ProjectReference Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
+    <ProjectReference Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="$(Configuration)!='Debug'">
     <PackageReference Include="EngineBay.Authentication" Version="1.0.0" />
     <PackageReference Include="EngineBay.Persistence" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="8.0.692" />
     <PackageReference Include="PrivateSetterContractResolver" Version="2.1.0" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
