--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -27,11 +27,11 @@
     <IsTrimmable>false</IsTrimmable>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(Configuration)=='Debug'">
+  <ItemGroup Condition="$(Configuration)=='Dev'">
     <ProjectReference Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
     <ProjectReference Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="$(Configuration)!='Debug'">
+  <ItemGroup Condition="$(Configuration)!='Dev'">
     <PackageReference Include="EngineBay.Authentication" Version="1.0.0" />
     <PackageReference Include="EngineBay.Persistence" Version="4.1.0" />
   </ItemGroup>
