--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -38,8 +38,8 @@
         </When>
         <Otherwise>
             <ItemGroup>
-                <PackageReference Include="EngineBay.Authentication" Version="1.0.0" />
-                <PackageReference Include="EngineBay.Persistence" Version="4.1.1" />
+                <PackageReference Include="EngineBay.Authentication" Version="1.0.2" />
+                <PackageReference Include="EngineBay.Persistence" Version="4.2.0" />
             </ItemGroup>
         </Otherwise>
     </Choose>
