--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -30,14 +30,14 @@
     <Choose>
         <When Condition="'$(ASPNETCORE_ENVIRONMENT)' == 'Development'">
             <ItemGroup>
-                <ProjectReference
-                    Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
-                <ProjectReference
-                    Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
+                <ProjectReference Include="../../auditing/EngineBay.Auditing/EngineBay.Auditing.csproj" />
+                <ProjectReference Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
+                <ProjectReference Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
             </ItemGroup>
         </When>
         <Otherwise>
             <ItemGroup>
+                <PackageReference Include="EngineBay.Auditing" Version="1.0.0" />
                 <PackageReference Include="EngineBay.Authentication" Version="1.0.2" />
                 <PackageReference Include="EngineBay.Persistence" Version="4.2.0" />
             </ItemGroup>
