#patch Feature/audit refactor (#60)
* Fetch refactor changes from old branch without launchSettings.json files

* Fixes for registering auditing, remove auditing from database management, update current identity classes

* Update module versions

* Update auditing, authentication, and persistence versions

* Auditing not needed to be imported in blueprints

--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -30,16 +30,14 @@
     <Choose>
         <When Condition="'$(ASPNETCORE_ENVIRONMENT)' == 'Development'">
             <ItemGroup>
-                <ProjectReference
-                    Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
-                <ProjectReference
-                    Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
+                <ProjectReference Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
+                <ProjectReference Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
             </ItemGroup>
         </When>
         <Otherwise>
             <ItemGroup>
-                <PackageReference Include="EngineBay.Authentication" Version="1.0.2" />
-                <PackageReference Include="EngineBay.Persistence" Version="4.2.0" />
+                <PackageReference Include="EngineBay.Authentication" Version="1.0.3" />
+                <PackageReference Include="EngineBay.Persistence" Version="5.0.0" />
             </ItemGroup>
         </Otherwise>
     </Choose>
