--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -31,15 +31,15 @@
         <When Condition="'$(ASPNETCORE_ENVIRONMENT)' == 'Development'">
             <ItemGroup>
                 <ProjectReference
-                    Include="../../authentication/EngineBay.Authentication/EngineBay.Authentication.csproj" />
+                    Include="../../auditing/EngineBay.Auditing/EngineBay.Auditing.csproj" />
                 <ProjectReference
                     Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
             </ItemGroup>
         </When>
         <Otherwise>
             <ItemGroup>
-                <PackageReference Include="EngineBay.Authentication" Version="2.0.1" />
-                <PackageReference Include="EngineBay.Persistence" Version="6.0.1" />
+                <PackageReference Include="EngineBay.Auditing" Version="1.0.2" />
+                <PackageReference Include="EngineBay.Persistence" Version="6.0.3" />
             </ItemGroup>
         </Otherwise>
     </Choose>
