--- a/EngineBay.Blueprints/EngineBay.Blueprints.csproj
+++ b/EngineBay.Blueprints/EngineBay.Blueprints.csproj
@@ -31,15 +31,12 @@
         <When Condition="'$(ASPNETCORE_ENVIRONMENT)' == 'Development'">
             <ItemGroup>
                 <ProjectReference
-                    Include="../../auditing/EngineBay.Auditing/EngineBay.Auditing.csproj" />
-                <ProjectReference
                     Include="../../persistence/EngineBay.Persistence/EngineBay.Persistence.csproj" />
             </ItemGroup>
         </When>
         <Otherwise>
             <ItemGroup>
-                <PackageReference Include="EngineBay.Auditing" Version="1.0.7" />
-                <PackageReference Include="EngineBay.Persistence" Version="6.0.4" />
+                <PackageReference Include="EngineBay.Persistence" Version="*" />
             </ItemGroup>
         </Otherwise>
     </Choose>
